add @zakodium scope in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "permission-checker",
+  "name": "@zakodium/permission-checker",
   "version": "0.0.0",
   "description": "",
   "main": "lib/index.js",
