--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
-    "eslint": "^6.2.1",
+    "eslint": "^6.2.2",
     "eslint-config-cheminfo": "^2.0.3",
+    "eslint-config-standard": "^14.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.15.2",
     "eslint-plugin-prettier": "^3.1.0",
